--- a/stylesheets/curogosho.css
+++ b/stylesheets/curogosho.css
@@ -1,42 +1,29 @@
 html, body {
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    overflow-x: hidden;
-}
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  overflow-x: hidden; }
 
-/*
-======================================================
- skrollr
-======================================================
-*/
+/*======================================================
+ * skrollr
+ *====================================================== */
 .skrollable {
-    /* First-level skrollables are positioned relative to window */
-    position: fixed;
-    /* Skrollables by default have a z-index of 100 in order to make it easy to position elements in front/back without changing each skrollable */
-    z-index: 100;
-}
+  position: fixed;
+  z-index: 100; }
 
 .skrollr-mobile .skrollable {
-    /*  May cause issues on Android default browser (see #331 on GitHub). */
-    position: absolute;
-}
+  position: absolute; }
 
 .skrollable .skrollable {
-    /* Second-level skrollables are positioned relative their parent skrollable */
-    position: absolute;
-}
-
-.skrollable .skrollable .skrollable {
-    /* Third-level (and below) skrollables are positioned static */
-    position: static;
-}
+  position: absolute; }
+  .skrollable .skrollable .skrollable {
+    position: static; }
 
 #progress {
-    height: 2%;
-    background: #444;
-    bottom: 0;
-    z-index: 200;
-}
+  height: 2%;
+  background: #444;
+  bottom: 0;
+  z-index: 200; }
 
+/*# sourceMappingURL=curogosho.css.map */
