--- a/index.haml
+++ b/index.haml
@@ -1,12 +1,12 @@
 %html{lang: "ja"}
   %head
     %meta{:charset => "UTF-8"}
-      %title
-      %script{src: "javascripts/jquery-2.1.4.min.js", type: "text/javascript"}
+      %title curogosho
       %link{href: "stylesheets/curogosho.css", rel: "stylesheet"}
+      %script{src: "javascripts/jquery-2.1.4.min.js"}
   %body
     #container
       #debug
       #haku
-    %script{src: "javascripts/skrollr.min.js", type: "text/javascript"}
-    %script{src: "javascripts/curogosho.js", type: "text/javascript"}
+    %script{src: "javascripts/skrollr.min.js"}
+    %script{src: "javascripts/curogosho.js"}
