--- a/index.haml
+++ b/index.haml
@@ -1,6 +1,6 @@
 %html{lang: "ja"}
   %head
-    %meta{:charset => "UTF-8"}
+    %meta{charset: "UTF-8"}
       %title curogosho
       %link{href: "stylesheets/curogosho.css", rel: "stylesheet"}
       %script{src: "javascripts/jquery-2.1.4.min.js"}
